--- a/src/composer.json
+++ b/src/composer.json
@@ -4,6 +4,7 @@
     "description": "The Laravel Framework.",
     "keywords": ["framework", "laravel"],
     "license": "MIT",
+
     "require": {
         "php": "^7.3|^8.0",
         "barryvdh/laravel-debugbar": "^3.6",
@@ -11,7 +12,10 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.40",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "maatwebsite/excel": "^3.1",
+        "phpoffice/phpspreadsheet": "*",
+        "stripe/stripe-php": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
