ローカルの修正を復元してコミット

--- a/docker/php/php.ini
+++ b/docker/php/php.ini
@@ -1,21 +1,5 @@
 date.timezone = "Asia/Tokyo"
 
 [mbstring]
-; mbstring.internal_encoding = "UTF-8"
+mbstring.internal_encoding = "UTF-8"
 mbstring.language = "Japanese"
-
-extension=gd
-
-; エラー表示を有効にする（開発環境でのみ）
-display_errors = On
-display_startup_errors = On
-error_reporting = E_ALL
-
-; メモリ上限（適宜設定）
-memory_limit = 128M
-
-; POSTデータの最大サイズ（適宜設定）
-post_max_size = 100M
-
-; アップロードファイルの最大サイズ（適宜設定）
-upload_max_filesize = 100M
