--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,22 +1,10 @@
-FROM php:8.0-fpm
+FROM php:7.4.9-fpm
 
 COPY php.ini /usr/local/etc/php/
 
 RUN apt update \
-  && apt install -y default-mysql-client zlib1g-dev libzip-dev \
-  libfreetype6-dev \
-  libjpeg62-turbo-dev \
-  libpng-dev \
-  unzip \
-  libmagickwand-dev --no-install-recommends \
-  && docker-php-ext-install pdo_mysql zip \
-  && docker-php-ext-configure gd --with-freetype --with-jpeg \
-  && docker-php-ext-install -j$(nproc) gd \
-  && pecl install imagick \
-  && docker-php-ext-enable imagick \
-  && apt-get clean \
-  && rm -rf /var/lib/apt/lists/*
-
+  && apt install -y default-mysql-client zlib1g-dev libzip-dev unzip \
+  && docker-php-ext-install pdo_mysql zip
 
 RUN curl -sS https://getcomposer.org/installer | php \
   && mv composer.phar /usr/local/bin/composer \
